feat: add Gc part2 with test